--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,29 @@
+appdirs==1.4.3
 bcrypt==3.1.7
 blinker==1.4
+certifi==2020.4.5.1
 cffi==1.14.0
 click==7.1.1
+distlib==0.3.0
+filelock==3.0.12
 Flask==1.1.2
 Flask-Bcrypt==0.7.1
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
+gunicorn==20.0.4
+importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
 Pillow==7.1.1
+pipenv==2018.11.26
 pycparser==2.20
 six==1.14.0
 SQLAlchemy==1.3.16
+virtualenv==20.0.18
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
 WTForms==2.2.1
+zipp==3.1.0
